--- a/css/styles.css
+++ b/css/styles.css
@@ -87,8 +87,8 @@ section {
     text-align: left;
     position: absolute;
     left: 10%;
-    top: 70px;
-    right: 45%;
+    top: 5%;
+    max-width: 700px;
 }
 
 .hero button {
